[Fixes #417] Upgrade Pax URL Aether to Maven 3.9.5, Maven Resolver 1.9.x and MiMa
* split repositories supported
* system properties mode (off by default, related to http.proxyXXX
  properties)
* more rational default values (global checksum/update policies)

(cherry picked from commit e40d9984e76c97bf28aa81912dea64934cf6f833)